[gd_scene load_steps=12 format=3 uid="uid://dqwp2akv2x1my"]

[ext_resource type="Script" path="res://Main.gd" id="1_qf6di"]
[ext_resource type="PackedScene" uid="uid://c3sj345u14g7b" path="res://coin.tscn" id="2_3shxx"]
[ext_resource type="Texture2D" uid="uid://bx5lxgrrj1pd6" path="res://assets/grass.png" id="2_sh2oa"]
[ext_resource type="PackedScene" uid="uid://djdt5hocxige0" path="res://player.tscn" id="3_3g18h"]
[ext_resource type="PackedScene" uid="uid://fc5r2t3m88tf" path="res://powerup.tscn" id="3_b4603"]
[ext_resource type="PackedScene" uid="uid://bj6vcclr80yno" path="res://cactus.tscn" id="4_lqooy"]
[ext_resource type="PackedScene" uid="uid://b8jwkv38fqa0a" path="res://hud.tscn" id="5_7lpuv"]
[ext_resource type="AudioStream" uid="uid://cq8qejeb53u8o" path="res://assets/audio/Coin.wav" id="6_1fm1a"]
[ext_resource type="AudioStream" uid="uid://nqaj8lg83lob" path="res://assets/audio/Level.wav" id="7_py7kk"]
[ext_resource type="AudioStream" uid="uid://d0u4pf78sfksh" path="res://assets/audio/EndSound.wav" id="8_u2ukx"]
[ext_resource type="AudioStream" uid="uid://rgxglexaaie7" path="res://assets/audio/Powerup.wav" id="9_tkrvc"]

[node name="Main" type="Node"]
script = ExtResource("1_qf6di")
coin_scene = ExtResource("2_3shxx")
powerup_scene = ExtResource("3_b4603")
cactus_scene = ExtResource("4_lqooy")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_sh2oa")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("3_3g18h")]
position = Vector2(226, 355)

[node name="GameTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource("5_7lpuv")]

[node name="CoinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_1fm1a")

[node name="LevelSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_py7kk")

[node name="EndSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_u2ukx")

[node name="PowerUps" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_tkrvc")

[node name="PowerupTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CactusTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="game_over" from="Player" to="." method="_on_player_game_over"]
[connection signal="hurt" from="Player" to="." method="_on_player_hurt"]
[connection signal="pickup" from="Player" to="." method="_on_player_pickup"]
[connection signal="powerup" from="Player" to="." method="_on_player_powerup"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_power_ups_appear_timeout"]
[connection signal="timeout" from="CactusTimer" to="." method="_on_cactus_timer_timeout"]
